# sigir16-topkcomplete

./: .gitmodules  CMakeLists.txt  README.md  exercises.txt  index.config  install.sh
data/: CMakeLists.txt  README.md  download.cmake  italian-cities.txt  stops_nl.txt
include/topkcomp/: index.hpp  index1.hpp  index2.hpp  index3.hpp  index4.hpp  index4ci.hpp  index5.hpp  index_common.hpp
instructions/: README.md
src/: index.cpp  web_server.cpp
web/: index.html  stops_nl.txt.index1.html  topkcomp.js
